NS-1028, NS-1040, NS-1038

--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -76,4 +76,5 @@
     <string name="text_contact">KONTAKT</string>
     <string name="text_error_updating_language">Ein Fehler ist aufgetreten Sprache zu ändern, versuchen Sie es erneut</string>
     <string name="text_emptystate_search_friends_title">Suchen Sie Ihren Freunden von Nickname und kommunizieren</string>
+    <string name="text_date_today">Heute</string>
 </resources>
