--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -75,4 +75,5 @@
     <string name="text_contact">CONTACTO</string>
     <string name="text_error_updating_language">Ha ocurrido un error al cambiar idioma, por favor inténtelo nuevamente</string>
     <string name="text_emptystate_search_friends_title">Busca a tus amigos por apodo y comunícate</string>
+    <string name="text_date_today">Hoy</string>
 </resources>
