--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -76,4 +76,5 @@
     <string name="text_contact">CONTATTO</string>
     <string name="text_error_updating_language">Verificato un errore durante la modifica lingua, riprova</string>
     <string name="text_emptystate_search_friends_title">Cerca i tuoi amici nickname e comunicare</string>
+    <string name="text_date_today">Oggi</string>
 </resources>
