NS-1041, NS-1022, NS-1021, NS-1036, NS-1037, NS-1039

--- a/app/src/main/res/drawable/bg_container_missed_call.xml
+++ b/app/src/main/res/drawable/bg_container_missed_call.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/small_radius" />
-    <solid android:color="?attr/attrBackgroundColorBackground" />
+    <solid android:color="@color/color_B1B0B0" />
 </shape>
