--- a/app/src/main/res/layout/cancel_subscription_dialog_fragment.xml
+++ b/app/src/main/res/layout/cancel_subscription_dialog_fragment.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="@dimen/large_margin"
             android:layout_marginEnd="@dimen/large_margin"
             android:paddingTop="20dp"
-            android:text="Cancelar suscripción"
+            android:text="@string/text_you_want_to_unsubscribe_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +42,7 @@
                 android:layout_marginTop="@dimen/normal_margin"
                 android:layout_marginEnd="@dimen/large_margin"
                 android:layout_marginBottom="@dimen/normal_margin"
-                android:text="¿Estás seguro de cancelar tu suscripción?"
+                android:text="@string/text_you_want_to_unsubscribe_desc"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/small_margin"
             android:layout_marginTop="@dimen/small_margin"
-            android:text="Sí, cancelar suscripción"
+            android:text="@string/text_yes_cancel"
             app:layout_constraintBottom_toTopOf="@id/button_cancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/container_content"
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_margin"
             android:layout_marginBottom="@dimen/small_margin"
-            android:text="No cancelar suscripción"
+            android:text="@string/text_not_for_now"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/button_accept"
             app:layout_constraintTop_toBottomOf="@id/button_accept" />
