--- a/app/src/main/res/layout/custom_view_audio_player.xml
+++ b/app/src/main/res/layout/custom_view_audio_player.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.naposystems.pepito.ui.custom.animatedTwoVectorView.AnimatedTwoVectorView
+        <ImageView
             android:id="@+id/imageButton_play"
             android:layout_width="36dp"
             android:layout_height="36dp"
@@ -22,13 +22,11 @@
             android:focusable="true"
             android:scaleType="fitCenter"
             android:visibility="visible"
-            app:firstAnimation="@drawable/anim_play_to_pause"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:secondAnimation="@drawable/anim_pause_to_play"
-            app:srcCompat="@drawable/ic_play_arrow_black" />
+            android:src="@drawable/ic_baseline_play_circle" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_controls"
@@ -56,7 +54,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/imageButton_forward"
                 app:layout_constraintStart_toEndOf="@+id/imageButton_rewind"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_2x_speed_black" />
+                app:srcCompat="@drawable/ic_baseline_2x_circle_outline" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/imageButton_forward"
