--- a/app/src/main/res/layout/logout_dialog_fragment.xml
+++ b/app/src/main/res/layout/logout_dialog_fragment.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="@dimen/large_margin"
             android:layout_marginEnd="@dimen/large_margin"
             android:paddingTop="20dp"
-            android:text="Cerrar sesión"
+            android:text="@string/text_logout_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +42,7 @@
                 android:layout_marginEnd="@dimen/large_margin"
                 android:layout_marginBottom="@dimen/normal_margin"
                 android:layout_marginTop="@dimen/normal_margin"
-                android:text="¿Estás seguro de cerrar sesión?"
+                android:text="@string/text_logout_desc"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/small_margin"
             android:layout_marginBottom="@dimen/small_margin"
-            android:text="Sí, cerrar sesión"
+            android:text="@string/text_yes_im_sure"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/container_content" />
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/small_margin"
-            android:text="No cerrar sesión"
+            android:text="@string/text_no_logout"
             app:layout_constraintEnd_toStartOf="@id/button_accept"
             app:layout_constraintTop_toTopOf="@id/button_accept" />
 
