--- a/app/src/main/res/values-es/subscription.xml
+++ b/app/src/main/res/values-es/subscription.xml
@@ -13,4 +13,12 @@
     <string name="text_message_selection_type_subscription">Debe seleccionar un tipo de suscripción</string>
     <string name="text_warning">A continuación, será redirigido a un portal de pagos, dicho portal es externo a NapoleoN Chat, por lo tanto, no cuenta con las mismas características que nuestra aplicación y usted deberá aceptar los términos y condiciones estipulados para el uso del mismo. No nos hacemos responsables por el tratamiento de los datos suministrados en el módulo de pagos.</string>
     <string name="text_subscription_and_time">%1$s - %2$d días restantes</string>
+    <string name="text_you_want_to_unsubscribe_title">¿Quieres cancelar tu suscripción?</string>
+    <string name="text_you_want_to_unsubscribe_desc">Si cancelas esta suscripción, sólo podrás usar NN chat hasta el DD-MM-AA (colocar fecha en que termina la suscripción)</string>
+    <string name="text_not_for_now">NO por ahora</string>
+    <string name="text_yes_cancel">SI, Cancelar</string>
+    <string name="text_unsubscribed_title">Suscripción Cancelada</string>
+    <string name="text_unsubscribed_desc">Recuerda que puedes suscribirte a otro paquete que se ajuste a tus necesidades en cualquier momento.</string>
+    <string name="text_finalize">Finalizar</string>
+    <string name="text_error_unsubscribe">Ha ocurrido un error al cancelar tu suscripción, por favor intenta más tarde.</string>
 </resources>
