--- a/app/src/main/res/values-pt/subscription.xml
+++ b/app/src/main/res/values-pt/subscription.xml
@@ -13,4 +13,12 @@
     <string name="text_message_selection_type_subscription">Você deve selecionar um tipo de assinatura</string>
     <string name="text_warning">Em seguida, você será redirecionado para um portal de pagamento, este portal é externo ao NapoleoN Chat, portanto, não possui as mesmas características de nosso aplicativo e você deve aceitar os termos e condições estipulados para seu uso. Não nos responsabilizamos pelo tratamento dos dados fornecidos no módulo de pagamento.</string>
     <string name="text_subscription_and_time">%1$s - %2$d dias restantes</string>
+    <string name="text_you_want_to_unsubscribe_title">Você deseja cancelar a inscrição?</string>
+    <string name="text_you_want_to_unsubscribe_desc">Se você cancelar essa assinatura, você só pode usar o chat para NN DD-MM-AA (que termina subscrição data place)</string>
+    <string name="text_not_for_now">Não por agora</string>
+    <string name="text_yes_cancel">SIM, o Anular</string>
+    <string name="text_unsubscribed_title">Unsubscribed</string>
+    <string name="text_unsubscribed_desc">Lembre-se que você pode se inscrever para um outro pacote que se adapte às suas necessidades a qualquer momento.</string>
+    <string name="text_finalize">Finalizar</string>
+    <string name="text_error_unsubscribe">Um erro cancelar a sua assinatura, por favor tente mais tarde ocorreu.</string>
 </resources>
