--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,6 +46,7 @@
     <color name="colorButtonAlertDialog">#d8a608</color>
     <color name="color_E8D8AB">#E8D8AB</color>
     <color name="color_808080">#808080</color>
+    <color name="color_B1B0B0">#B1B0B0</color>
 
     <!--   Dark NapoleoN-->
     <color name="color_383838">#383838</color>
