--- a/app/src/main/res/drawable/bg_incoming_message.xml
+++ b/app/src/main/res/drawable/bg_incoming_message.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:width="40dp">
-    <rotate
-        android:fromDegrees="-45"
-        android:pivotX="0%"
-        android:pivotY="0%"
-        android:toDegrees="0" >
-        <shape android:shape="rectangle" >
-            <solid android:color="?attr/attrBackgroundSectionColor" />
-            <corners android:radius="@dimen/minor_radius"/>
-        </shape>
-    </rotate>
-</item>
 <item android:left="12dp">
     <shape android:shape="rectangle" >
-        <solid android:color="?attr/attrBackgroundSectionColor" />
-        <corners android:radius="@dimen/minor_radius" />
+        <solid android:color="?attr/attrBackgroundConversation" />
+        <corners android:radius="@dimen/small_radius" />
+    </shape>
+</item>
+<item android:left="12dp">
+    <shape
+        android:shape="rectangle">
+        <stroke
+            android:width="1dp"
+            android:color="?attr/attrBorderIncomingMessage" />
+        <corners android:radius="@dimen/small_radius" />
     </shape>
 </item>
 </layer-list>
