--- a/app/src/main/res/drawable/bg_incoming_message_rounded.xml
+++ b/app/src/main/res/drawable/bg_incoming_message_rounded.xml
@@ -2,8 +2,17 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:start="12dp">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/attrBackgroundSectionColor" />
-            <corners android:radius="@dimen/minor_radius" />
+            <solid android:color="?attr/attrBackgroundConversation" />
+            <corners android:radius="@dimen/small_radius" />
+        </shape>
+    </item>
+    <item android:left="12dp">
+        <shape
+            android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="?attr/attrBorderIncomingMessage" />
+            <corners android:radius="@dimen/small_radius" />
         </shape>
     </item>
 </layer-list>
