--- a/app/src/main/res/drawable/bg_my_message.xml
+++ b/app/src/main/res/drawable/bg_my_message.xml
@@ -1,21 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:height="40dp">
-        <rotate
-            android:fromDegrees="45"
-            android:pivotX="100%"
-            android:pivotY="0%"
-            android:toDegrees="0">
-            <shape android:shape="rectangle">
-                <solid android:color="?attr/attrBackgroundMyMessage" />
-                <corners android:radius="@dimen/minor_radius" />
-            </shape>
-        </rotate>
-    </item>
     <item android:right="12dp">
         <shape android:shape="rectangle">
             <solid android:color="?attr/attrBackgroundMyMessage" />
-            <corners android:radius="@dimen/minor_radius" />
+            <corners android:radius="@dimen/small_radius" />
         </shape>
     </item>
 </layer-list>
