--- a/app/src/main/res/drawable/bg_my_message_rounded.xml
+++ b/app/src/main/res/drawable/bg_my_message_rounded.xml
@@ -3,7 +3,7 @@
     <item android:end="12dp">
         <shape android:shape="rectangle">
             <solid android:color="?attr/attrBackgroundMyMessage" />
-            <corners android:radius="@dimen/minor_radius" />
+            <corners android:radius="@dimen/small_radius" />
         </shape>
     </item>
 </layer-list>
