--- a/app/src/main/res/layout/custom_input_panel_widget.xml
+++ b/app/src/main/res/layout/custom_input_panel_widget.xml
@@ -79,6 +79,7 @@
                             android:hint="@string/text_write_message"
                             android:imeOptions="actionGo"
                             android:maxLines="6"
+                            android:maxLength="1000"
                             android:paddingTop="4dp"
                             android:paddingBottom="4dp"
                             android:scrollbarThumbVertical="@color/colorSecondaryDark"
