--- a/app/src/main/res/layout/general_dialog_fragment.xml
+++ b/app/src/main/res/layout/general_dialog_fragment.xml
@@ -25,6 +25,7 @@
             android:layout_marginStart="@dimen/small_margin"
             android:layout_marginEnd="@dimen/normal_margin"
             android:gravity="center_vertical"
+            android:textSize="@dimen/normal_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,9 +62,9 @@
             android:layout_marginEnd="@dimen/small_margin"
             android:text="@string/text_cancel"
             android:visibility="gone"
-            tools:visibility="visible"
             app:layout_constraintEnd_toStartOf="@id/button_accept"
-            app:layout_constraintTop_toTopOf="@id/button_accept" />
+            app:layout_constraintTop_toTopOf="@id/button_accept"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
