--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -68,9 +68,16 @@
     <attr name="attrBackgroundMyMessage" format="reference" />
     <attr name="attrBorderIncomingMessage" format="reference" />
     <attr name="attrBackgroundConversation" format="reference" />
+    <attr name="attrBubbleIncomingMessage" format="reference" />
+    <attr name="attrBubbleMyMessage" format="reference" />
+    <attr name="attrBackgroundColorSystem" format="reference" />
 
     <!--//Tint-->
     <attr name="attrTintColorSecondaryDark" format="reference" />
+    <attr name="attrTintColorControlMyMessage" format="reference" />
+    <attr name="attrTintColorControlIncomingMessage" format="reference" />
+    <attr name="attrTintProgressBar" format="reference" />
+    <attr name="attrTintColorIconMedia" format="reference" />
 
     <!--TextColor-->
     <attr name="attrTextColorPrimaryTextColor" format="reference" />
@@ -83,6 +90,7 @@
     <attr name="attrTextColorMessageAndTimeHome" format="reference" />
     <attr name="attrTextColorTimeMyMessage" format="reference" />
     <attr name="attrTextColorTimeIncomingMessage" format="reference" />
+    <attr name="attrTextColorSystem" format="reference" />
     <attr name="attrTextColorColorTextMyMessage" format="reference" />
     <attr name="attrTextColorColorTextIncomingMessage" format="reference" />
     <attr name="attrTextColorLinkTextColor" format="reference" />
@@ -173,6 +181,8 @@
     <attr name="attrBackgroundColorQuoteIncomingMessage" format="reference" />
     <attr name="attrIdentifierColorMyQuote" format="reference" />
     <attr name="attrIdentifierColorYourQuote" format="reference" />
+    <attr name="attrTextColorBodyYourQuote" format="reference" />
+    <attr name="attrTextColorBodyMyQuote" format="reference" />
 
     <!-- Empty State -->
     <attr name="attrImageEmptyStateHome" format="reference" />
