--- a/app/src/main/res/layout/custom_input_panel_quote.xml
+++ b/app/src/main/res/layout/custom_input_panel_quote.xml
@@ -43,9 +43,9 @@
 
         <TextView
             android:id="@+id/textView_message_quote"
-            style="@style/SmallBodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/small_text_size"
             android:layout_marginEnd="@dimen/small_margin"
             android:layout_marginBottom="@dimen/small_margin"
             android:ellipsize="end"
