--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -77,4 +77,7 @@
     <string name="text_error_updating_language">Ocorreu um erro ao mudar de idioma, por favor tente novamente</string>
     <string name="text_emptystate_search_friends_title">Procurar seus amigos pelo apelido e comunicar</string>
     <string name="text_date_today">Hoje</string>
+    <string name="text_title_attach_doc">Documento adjunto</string>
+    <string name="text_attch_doc_not_allowed">O arquivo selecionado não é permitido</string>
+    <string name="text_attch_doc_size_exceed">O ficheiro seleccionado, excede o tamanho permitido (100MB)</string>
 </resources>
