--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -96,4 +96,7 @@
     <string name="text_error_updating_language">An error occurred changing language, please try again</string>
     <string name="text_emptystate_search_friends_title">Search for your friends by nickname and communicate</string>
     <string name="text_date_today">Today</string>
+    <string name="text_title_attach_doc">Attached document</string>
+    <string name="text_attch_doc_not_allowed">The selected file is not allowed</string>
+    <string name="text_attch_doc_size_exceed">The selected file exceeds the allowed size (100MB)</string>
 </resources>
