--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -112,6 +112,7 @@
 
     <!--IconTint-->
     <attr name="attrIconTintWhite" format="reference" />
+    <attr name="attrIconTintArrow" format="reference" />
 
     <!--BackgroundTint-->
     <attr name="attrBackgroundTintColorSecondary" format="reference" />
