--- a/app/src/main/res/drawable/bg_spinner.xml
+++ b/app/src/main/res/drawable/bg_spinner.xml
@@ -20,7 +20,7 @@
 
             <item android:drawable="@drawable/ic_arrow_down_black" android:gravity="center_vertical|right" android:right="5dp">
 
-                <bitmap android:src="@drawable/ic_arrow_down_black" android:tint="?attr/attrTintColorSecondaryDark"/>
+                <bitmap android:src="@drawable/ic_arrow_down_black" android:tint="?attr/attrIconTintArrow"/>
             </item>
 
         </layer-list>
