--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,7 @@
         <item name="attrBackgroundColorBackground">@color/colorBackground</item>
         <item name="attrBackgroundConversation">@color/color_FFFFFF</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDark</item>
+        <item name="attrIconTintArrow">@color/colorSecondaryDark</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimary</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -147,6 +148,7 @@
         <item name="attrBackgroundTintButtonTint">@color/color_F2F2F2</item>
         <item name="attrBackgroundColorBackground">@color/color_121212</item>
         <item name="attrTintColorSecondaryDark">@color/color_505564</item>
+        <item name="attrIconTintArrow">@color/color_F2F2F2</item>
         <item name="attrTextColorColorPrimary">@color/color_383838</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -245,6 +247,7 @@
         <item name="attrBackgroundTintButtonTint">@color/color_903B6E</item>
         <item name="attrBackgroundColorBackground">@color/color_FFEFFF</item>
         <item name="attrTintColorSecondaryDark">@color/color_9F6E8B</item>
+        <item name="attrIconTintArrow">@color/color_9F6E8B</item>
         <item name="attrTextColorColorPrimary">@color/color_F38DC7</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -333,6 +336,7 @@
         <item name="attrBackgroundTintButtonTint">@color/color_0074A7</item>
         <item name="attrBackgroundColorBackground">@color/color_E6F2FF</item>
         <item name="attrTintColorSecondaryDark">@color/color_9B9B9B</item>
+        <item name="attrIconTintArrow">@color/color_9B9B9B</item>
         <item name="attrTextColorColorPrimary">@color/color_4AA3D9</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -420,6 +424,7 @@
         <item name="attrBackgroundTintButtonTint">@color/color_7D366F</item>
         <item name="attrBackgroundColorBackground">@color/color_F2F2F2</item>
         <item name="attrTintColorSecondaryDark">@color/color_9B9B9B</item>
+        <item name="attrIconTintArrow">@color/color_9B9B9B</item>
         <item name="attrTextColorColorPrimary">@color/color_7D366F</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -509,6 +514,7 @@
         <item name="attrBackgroundTintButtonTint">@color/color_3CB043</item>
         <item name="attrBackgroundColorBackground">@color/color_001600</item>
         <item name="attrTintColorSecondaryDark">@color/color_9B9B9B</item>
+        <item name="attrIconTintArrow">@color/color_9B9B9B</item>
         <item name="attrTextColorColorPrimary">@color/color_031E03</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -593,6 +599,7 @@
         <item name="attrBackgroundTintButtonTint">@color/color_D8A605</item>
         <item name="attrBackgroundColorBackground">@color/color_121212</item>
         <item name="attrTintColorSecondaryDark">@color/color_D8A605</item>
+        <item name="attrIconTintArrow">@color/color_D8A605</item>
         <item name="attrTextColorColorPrimary">@color/color_282828</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -679,6 +686,7 @@
         <item name="attrBackgroundTintButtonTint">@color/color_F2F2F2</item>
         <item name="attrBackgroundColorBackground">@color/color_20202E</item>
         <item name="attrTintColorSecondaryDark">@color/color_59BC88</item>
+        <item name="attrIconTintArrow">@color/color_59BC88</item>
         <item name="attrTextColorColorPrimary">@color/color_2A2C45</item>
         <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
         </item>
@@ -732,6 +740,7 @@
     </style>
 
     <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textStyle">bold</item>
         <item name="android:background">?attr/attrBackgroundColorBackgroundDialog</item>
         <item name="android:textColorPrimary">?attr/attrTextColorSecondaryTextColor</item>
     </style>
@@ -1184,6 +1193,18 @@
         <item name="android:layout_marginBottom">4dp</item>
         <item name="android:minWidth">250dp</item>
         <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="italicText">
+        <item name="android:textStyle">italic</item>
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">?attr/attrTextColorMessageAndTimeHome</item>
+    </style>
+
+    <style name="normalText">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">?attr/attrTextColorMessageAndTimeHome</item>
     </style>
 
 </resources>
